<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_UnloadingStation_InOuts" Id="{a3e22654-1df3-4e52-ba8e-22b17ec7a422}">
    <Declaration><![CDATA[TYPE ST_UnloadingStation_InOuts :
STRUCT
	bBottleDetectionSensor AT %I*: BOOL;
	stUnloadingActuator: ST_ActuatorInOut_TC;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>