<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_UnloadingStation_Settings" Id="{53dde625-ad1d-4de5-a7ed-c65cdab5c8fa}">
    <Declaration><![CDATA[TYPE ST_UnloadingStation_Settings :
STRUCT
	iBottleDetectionON_TimeoutMS :UINT:=2000;
	iBottleDetectionOFF_TimeoutMS :UINT:=2000;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>